Fix alignment in newer zen versions in collapsed mode (Junk "code")

--- a/sidebar-expand-on-hover/chrome.css
+++ b/sidebar-expand-on-hover/chrome.css
@@ -103,6 +103,7 @@
 
                 .tab-content {
                     min-width: 0 !important;
+                    padding-left: 12px !important;
                 }
 
                 @media not (-moz-bool-pref: "theme.sidebar_expand_on_hover.default_tab_background_shape") {
@@ -319,6 +320,7 @@
     #zen-sidebar-bottom-buttons {
         display: flex !important;
         flex-direction: row !important;
+        padding-left: 0px !important;
     }
     #zen-sidebar-bottom-buttons > * {
         flex-grow: 1 !important;
@@ -331,6 +333,7 @@
         flex-direction: column;
         max-width: 100% !important;
         overflow: hidden;
+        padding-left: 0px !important;
       }
     #tabbrowser-tabs[orient="vertical"] {
         overflow: hidden;
@@ -338,6 +341,6 @@
         box-sizing: border-box;
     }
     #navigator-toolbox:not([zen-has-hover], [has-popup-menu], [movingtab]) vbox.tab-background {
-        width: 80% !important;
+        width: 90% !important;
     }
 }
